Villanova_Dev1/src/objects/SFDC_Event_Expenses__c.object
<CustomObject>
    <description>This is an object used to create a many-to-many join between Special Events and Expenses.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Unit Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Equipment__c</fullName>
        <label>Equipment</label>
        <referenceTo>SFDC_Equipment__c</referenceTo>
        <relationshipName>R00N60000001HpzfEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Facility__c</fullName>
        <label>Facility</label>
        <referenceTo>SFDC_Facility__c</referenceTo>
        <relationshipName>R00N60000001HpzdEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Special_Event__c</fullName>
        <label>Special Event</label>
        <referenceTo>SFDC_Special_Event__c</referenceTo>
        <relationshipName>R00N60000001HpzYEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Quantity__c  *  Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <referenceTo>SFDC_Vendor_Partner__c</referenceTo>
        <relationshipName>R00N60000001HpzgEAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Event Expense</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>